# Advanced_Numerical_Methods

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_cpp.sh  build_tests_cpp.sh  download_cpp_dependencies.sh  numerical_methods.ipkg
course_exercises/exercise_1/: exercise1.m  gram_schmidt.m  modified_gram_schmidt.m
course_exercises/exercise_2/: back_substitution_gauss.m  cholesky_factorisation.m  ex2.m  forward_substitution_gauss.m  iseqtol.m  naive_gauss_elimination.m  pivoting_gauss_elimination.m  solve_naive_gauss.m  solve_pivot_gauss.m
cpp_src/: matrix.cpp  matrix.h
cpp_src/matrix_factorisations/: cholesky_factorisation.h  gaussian_elimination.h  gram_schmidt.h  modified_gram_schmidt.h  pivoting_gauss_elimination.h
cpp_tests/: tests.cpp
idris_src/: Cholesky.idr  LUDecompose.idr
idris_src/Tests/: Cholesky.idr
matlab_src/matrix_factorisations/: .gram_schmidt.matlab.swp  back_substitution_gauss.m  cholesky_factorisation.m  gram_schmidt.m  gram_schmidt.matlab  modified_gram_schmidt.m  naive_gauss_elimination.m  pivoting_gauss_elimination.m  solve_naive_gauss.m  test.matlab
matlab_tests/: solve_naive_gauss_tests.m
other_src/: cholesky.idr
